# HGNN

./: .gitignore  README.md  pyproject.toml  run.py
configs/: default.yaml
configs/data/: cat_edge_dawn.yaml  coauth_dblp_full.yaml  email_eu_full.yaml  stackoverflow_answers.yaml
configs/experiment/: allset_transformer.yaml  baseline.yaml  baseline_no_deterministic.yaml  cat_edge_dawn_full_label.yaml  cat_edge_dawn_low_label.yaml  coauth_dblp_transfer.yaml  hypergcn.yaml  stackoverflow_ood.yaml  unignn.yaml
configs/model/: allset_transformer.yaml  df_hgnn.yaml  hypergcn.yaml  unignn.yaml
df_hgnn_project/: README.md  requirements.txt
df_hgnn_project/configs/: example_dawn.yaml  example_stackoverflow.yaml
df_hgnn_project/scripts/: run_examples.sh
df_hgnn_project/src/: metrics.py  train.py
docs/: architecture.md  data-spec.md  experiment-notes.md  model-card.md  reporting.md  task_tech_plan.md
scripts/: analyze_results.py  evaluate.py  export_onnx.py  prepare_cat_edge_dawn_raw.py  preprocess_cat_edge_dawn.py  preprocess_coauth_dblp_full.py  preprocess_email_eu_full.py  preprocess_stackoverflow_answers.py  run_experiment_suite.py  train_df_hgnn.py
src/common/: __init__.py  logging.py  path.py  seed.py
src/evaluation/: metrics.py  reporting.py
src/features/: deterministic_bank.py
src/models/: __init__.py  allset_transformer.py  baseline_utils.py  df_hgnn.py  hypergcn.py  registry.py  unignn.py
src/training/: callbacks.py  optimizers.py  trainer.py
tests/unit/: test_deterministic_features.py  test_df_hgnn.py  test_email_eu_full_loader.py  (+2 more)
(+38 files in other folders)
