[project]
name = "df-hgnn"
version = "0.1.0"
description = "Deterministic-feature-augmented hypergraph neural network toolkit"
authors = [{name = "Research Team"}]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "hydra-core>=1.3",
  "pandas>=1.5",
  "tqdm>=4.65",
  "scikit-learn>=1.2",
  "omegaconf>=2.3",
  "matplotlib>=3.7"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
